--- a/fim.html
+++ b/fim.html
@@ -1,40 +1,47 @@
-<!doctype html>
-<html lang='pt-br'>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel='stylesheet' href='_css/estilo.css'>
-    <link rel='stylesheet' href='_css/normalize.css'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='css/normalize.css'>
     <link rel='shortcup icon' href='_imagens/beatle-icon.png'>
-    <title>The Beatles: Fim</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
 </head>
 <body>
-    <div class='conteiner'>
-        <header>
-            <div class='header-inline'>
-                <h1><a href='index.html'>The Beatles</a></h1>
-            <div class='header-inline2 menu'>
-                <ul>
-                    <li><a href='biografia.html'>Biografia</a></li>
-                    <li><a href='fim.html'>Fim</a></li>
-                    <li><a href='membros.html'>Membros</a></li>
-                    <li><a href='https://www.youtube.com/watch?v=TUcA953S0ZU' target="_blank">Musica</a></li>
-                </ul>
-                </div><!--//header-inline-->
-        </header>
-        <div class='sobre'>
-            <p>John Lennon, Paul McCartney, George Harrison e Ringo Starr começaram a tocar juntos como banda em 1962. A separação de The Beatles foi um processo cumulativo marcado por rumores e comentários ambíguos de seus membros no que dizia respeito ao próprio futuro enquanto integrantes da banda. Em setembro de 1969, Lennon reservadamente informou a seus companheiros de banda que ele estava deixando o grupo. No entanto, não houve conhecimento público do fato até 10 de abril de 1970, quando McCartney anunciou que também estava deixando o grupo.</p>
-            <p>Houve numerosas causas para a separação da banda, inclusive o abandono das turnês em 1966 e a morte do empresário Brian Epstein em 1967.[1] Conflitos também surgiram das diferenças na visão artística dos integrantes.[2] Tanto Harrison quanto Starr temporariamente deixaram o grupo algumas vezes durante 1968 e 1969; em 1970 todos os quatro membros haviam começado a trabalhar em projetos-solo após terem percebido que o grupo não se reuniria mais. Por fim, a animosidade crescente tornou impossível que o grupo continuasse a trabalhar junto.[3]</p>    
-            <p>anos seguintes, houve parcerias e trabalhos esporádicos de gravação entre os membros do grupo, mas jamais com os quatro ex-Beatles colaborando simultaneamente em uma gravação ou em um concerto novamente. Após a morte de Lennon em 1980, os três membros remanescentes reuniram-se para o projeto Anthology em 1994, usando duas demos deixadas por Lennon – "Free as a Bird" e "Real Love" – como base para novas canções gravadas e lançadas como The Beatles.[4]</p>
-        </div><!--//sobre-->
-        <div class='img-all'>
-            <img src='_imagens/beatles_fim3.jpg' alt='The Beatles'>
-            <img src='_imagens/bealtles_fim4.jpg' alt='The Beatles'>
-            <img src='_imagens/beatles_fim5.jpg' alt='The Beatles'>
-            <img src='_imagens/beatles5.jpg' alt='The Beatles'>
-        </div><!--//img-all-->
-    </div><!--div conteiner-->
-        <footer>
-            <h6>&copy; Copyright</h6>
-        </footer>        
+    <nav>
+        <h1>The Beatles</h1>
+        <ul>
+            <li><a href='index.html'>Home</a></li>
+            <li><a href='sobre.html'>Sobre</a></li>
+            <li><a href='membros.html'>Membros</a></li>
+            <li><a href='fim.html'>Fim da banda</a></li>
+            <li class="music"><a href='https://www.youtube.com/watch?v=TUcA953S0ZU' target="_blank">Musicas</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <h2>Fim do grupo</h2>
+        <div class="area-text">
+            <p>John Lennon, Paul McCartney, George Harrison e Ringo Starr começaram a tocar juntos como banda em 1962. A separação de The Beatles foi um processo cumulativo marcado por rumores e comentários ambíguos de seus membros no que dizia respeito ao próprio futuro enquanto integrantes da banda. Em setembro de 1969, Lennon reservadamente informou a seus companheiros de banda que ele estava deixando o grupo. No entanto, não houve conhecimento público do fato até 10 de abril de 1970, quando McCartney anunciou que também estava deixando o grupo.
+            </p>
+            <img class="saidapaul" src="_imagens/saidapaul.jpg" alt="" width="300px">
+            <p>Houve numerosas causas para a separação da banda, inclusive o abandono das turnês em 1966 e a morte do empresário Brian Epstein em 1967.[1] Conflitos também surgiram das diferenças na visão artística dos integrantes.[2] Tanto Harrison quanto Starr temporariamente deixaram o grupo algumas vezes durante 1968 e 1969; em 1970 todos os quatro membros haviam começado a trabalhar em projetos-solo após terem percebido que o grupo não se reuniria mais. Por fim, a animosidade crescente tornou impossível que o grupo continuasse a trabalhar junto.[3]
+            anos seguintes, houve parcerias e trabalhos esporádicos de gravação entre os membros do grupo, mas jamais com os quatro ex-Beatles colaborando simultaneamente em uma gravação ou em um concerto novamente. Após a morte de Lennon em 1980, os três membros remanescentes reuniram-se para o projeto Anthology em 1994, usando duas demos deixadas por Lennon – "Free as a Bird" e "Real Love" – como base para novas canções gravadas e lançadas como The Beatles.[4]
+        </p>
+        </div>
+        <div class="imagens">
+            <h2>Ultimas fotos do grupo junto</h2>
+            <div class="img">
+                <img src='_imagens/fim1.jpg'>
+                <img src='_imagens/fim2.jpg'>
+                <img src='_imagens/fim3.jpg'>
+                <img src='_imagens/fim4.jpg'>
+            </div>
+        </div><!-- imagens -->
+    </div><!-- container -->
+    <footer>
+        <p>Todos os direitos reservados &copy;</p>
+    </footer>
 </body>
 </html>
