--- a/index.html
+++ b/index.html
@@ -1,57 +1,53 @@
-<!doctype html>
-<html lang='pt-br'>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel='stylesheet' href='_css/estilo.css'>
-    <link rel='stylesheet' href='_css/normalize.css'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='css/normalize.css'>
     <link rel='shortcup icon' href='_imagens/beatle-icon.png'>
-    <title>The Beatles</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
 </head>
 <body>
-    <div class='conteiner'>
-        <header>
-            <div class='header-inline'>
-                <h1><a href='index.html'>The Beatles</a></h1>
-            <div class='header-inline2 menu'>
-                <ul>
-                    <li><a href='biografia.html'>Biografia</a></li>
-                    <li><a href='fim.html'>Fim</a></li>
-                    <li><a href='membros.html'>Membros</a></li>
-                    <li><a href='https://www.youtube.com/watch?v=TUcA953S0ZU' target="_blank">Musica</a></li>
-                </ul>
-                </div><!--//header-inline-->
-        </header>  
-        <div class='text-title'>
-                <h3>Alguns fatos sobre os The Beatles</h3>
-        </div><!--//text-tiltle-->
-            <div class='text-sobre'>
-                <p>The Beatles foi uma banda de rock inglesa formada em 1960 na cidade de Liverpool. Formada por John Lennon, Paul McCartney, George Harrison e Ringo Starr, é considerada a banda mais influente de todos os tempos. O grupo fez parte do desenvolvimento da contracultura da década de 1960 e do reconhecimento da música popular como forma de arte. Enraizados do skiffle, beat e rock and roll da década de 1950, seu som incorporava elementos da música clássica e pop tradicional de maneiras inovadoras; a banda mais tarde explorou estilos musicais que variavam de baladas e música indiana a psicodelia e hard rock. Como pioneiros em gravação, composição e apresentação artística, o grupo revolucionou muitos aspectos da indústria da música e foi frequentemente divulgado como líder dos movimentos juvenis e socioculturais da época.</p>
-                </div><!--//text-sobre-->
-            <div class='img-all'>
-                <div class='space-img'>    
-                    <img src='_imagens/beatles_1960.jpg' alt='The Beatles em 1960'>
-                    <p>Liderados por Lennon e McCartney, a banda construiu sua reputação tocando em clubes de Liverpool e Hamburgo durante três anos a partir de 1960, inicialmente com Stuart Sutcliffe tocando baixo. Lennon, McCartney e Harrison, juntos desde 1958, passaram por uma sucessão de bateristas, incluindo Pete Best, antes de pedirem a Starr que se juntasse a eles, em 1962.</p>
-                </div><!--//space-img-->
-                <div class='space-img'>
-                    <img src='_imagens/beatles_1964.jpg'>
-                    <p>No início de 1964, os Beatles tornaram-se estrelas internacionais, liderando a "Invasão Britânica" do mercado pop dos Estados Unidos e quebrando vários recordes de vendas. Eles logo fizeram sua estreia no cinema com A Hard Day's Night (1964).</p>
-                </div><!--//space-img-->
-                <div class="space-img">
-                <img src='_imagens/beatles_1960.jpg' alt='The Beatles'>
-                    <p>A partir de 1965, eles produziram gravações cada vez mais inovadoras, incluindo os álbuns Rubber Soul (1965), Revolver (1966) e Sgt. Pepper's Lonely Hearts Club Band (1967), tendo maior sucesso comercial com The Beatles (1968) e Abbey Road (1969). Em 1968, eles fundaram a Apple Corps, uma corporação multimídia que continua supervisionando projetos relacionados ao legado da banda.</p>
-                </div><!--//space-img-->
-                <div class='space-img'>
-                    <img src='_imagens/beatles_1964_auge.jpg'>
-                    <p>Os Beatles lideram a lista de artistas mais vendidos de todos os tempos, com vendas certificadas de mais de 183 milhões de unidades nos Estados Unidos e vendas estimadas de 600 milhões de unidades em todo o mundo. Eles detêm o recorde da maioria de álbuns número um na parada de álbuns do Reino Unido, maioria de hits número um na parada Hot 100 da Billboard e maioria de singles vendidos no Reino Unido.</p>
-                </div><!--//space-img-->
-                <div class='space-img'>
-                    <img src='_imagens/bealtes_yellowsumarine.jpg'>
-                    <p>Os Beatles lideram a lista de artistas mais vendidos de todos os tempos, com vendas certificadas de mais de 183 milhões de unidades nos Estados Unidos e vendas estimadas de 600 milhões de unidades em todo o mundo. Eles detêm o recorde da maioria de álbuns número um na parada de álbuns do Reino Unido, maioria de hits número um na parada Hot 100 da Billboard e maioria de singles vendidos no Reino Unido.</p>
-                </div><!--//space-img-->
-            </div><!--//img-all-->
-    </div><!--//continer-->
-            <footer>
-            <h6>&copy; Copyright</h6>
-        </footer>     
+    <nav>
+        <h1>The Beatles</h1>
+        <ul>
+            <li><a href='index.html'>Home</a></li>
+            <li><a href='sobre.html'>Sobre</a></li>
+            <li><a href='membros.html'>Membros</a></li>
+            <li><a href='fim.html'>Fim da banda</a></li>
+            <li class="music"><a href='https://www.youtube.com/watch?v=TUcA953S0ZU' target="_blank">Musicas</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <h2>Biografia do grupo</h2>
+        <div class="area-text">
+            <p>
+            The Beatles foi uma banda britânica, de rock, formada em Liverpool, cidade do noroeste da Inglaterra, que ficou famosa em todo o mundo e influenciou toda uma geração, movimento que a imprensa britânica chamou de Beatlemania.
+            The Beatles foi formada em 1960, por 4 integrantes, John Lennon, Ringo Starr, Paul McCartney e George Harrison. A banda criada em 1957, inicialmente foi formada por John Lennon e seus colegas de escola, Peter Sholton, Erick Griffths, Bill Smith e Rod Davis. Em homenagem a escola Quarry Bank School, a banda recebeu o nome de The Quarrymen.
+            Ainda em 1957, Paul McCartney foi convidado a integrar a banda. Em 1958, foi a vez de George juntar-se ao grupo. Em 1960 a banda muda o nome para "The Beatles". Nesta época a banda não tinha baterista fixo. Em 1961, The Beatles realiza sua primeira apresentação no The Cavem Club, onde permaneceu tocando até 1963.
+            Em 1962, assinaram contrato com o empresário Briam Epstein, que mudou o visual da banda, trocando as roupas de couro por trajes formais. Ainda este ano, Ringo Starr é convidado para baterista da banda. Em agosto a banda fez sua primeira apresentação com a formação definitiva, George, Paul, John e Ringo.
+            Em outubro de 1962, com a gravação de "Love Me Do", a banda participou do programa People and Places, transmitido ao vivo na TV Granada. No início de 1963 a banda estava em todas as paradas britânicas.
+            Em 1964 a banda fez sua primeira apresentação em Nova Iorque, assistidos por uma multidão, a beatlemania se espalhava por vários países. Em 1965 a rainha Elizabeth II da Inglaterra, condecorou os Beatles com a Ordem do Império Britânico.
+            Em 1965 a banda já lançava seu sexto álbum. Em 1966 a banda tira férias de três meses e, em março inicia uma turnê por cinco países, Alemanha, Filipinas, Japão, Estados Unidos e Canadá. Em 1967 o empresário morre e a banda entra em discórdia para escolher um novo empresário.
+            Em 1969 o grupo grava seu penúltimo álbum "Abbey Road". Em setembro Lennon anunciou sua saída da banda. No dia 10 de abril de 1970, Paul anunciou para o público, o fim da Banda, uma semana antes do lançamento de seu primeiro álbum solo. O motivo do fim do grupo ainda é cercado de mistérios.
+            </p>
+        </div>
+        <div class="imagens">
+            <h2>Foto do Beatles</h2>
+            <div class="img">
+                <img src='_imagens/beatles_young1.jpg'>
+                <img src='_imagens/beatles_young2.jpg'>
+                <img src='_imagens/beatles_young3.jpg'>
+                <img src='_imagens/beatles_young4.jpg'>
+                <img src='_imagens/beatles_young5.jpg'>
+                <img src='_imagens/beatles_young6.jpg'>
+            </div>
+        </div><!-- imagens -->
+    </div><!-- container -->
+    <footer>
+        <p>Todos os direitos reservados &copy;</p>
+    </footer>
 </body>
 </html>
