--- a/fim.html
+++ b/fim.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +7,19 @@
     <link rel='stylesheet' href='css/normalize.css'>
     <link rel='shortcup icon' href='_imagens/beatle-icon.png'>
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Fim</title>
 </head>
 <body>
     <nav>
         <h1>The Beatles</h1>
+        <label for="bars">
+            <div>
+                <section></section>
+                <section></section>
+                <section></section>
+            </div>
+        </label>
+        <input type="checkbox" name="" id="bars">
         <ul>
             <li><a href='index.html'>Home</a></li>
             <li><a href='sobre.html'>Sobre</a></li>
